--- a/static/index.html
+++ b/static/index.html
@@ -1,17 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Web food shop</title>
-	
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<style>
+		html,
+		body {
+			height: 100%;
+		}
+
+		.bg {
+			background-image: url('images/main-background.jpg');
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+	</style>
 </head>
-<body>
-	<div class="col md-8 sm-1">
-		<h1>Web food shop</h1>
+
+<body class="bg">
+	<div class="container">
+		<div class="row justify-content-between">
+			<div class="col-4">
+				<h1 style="font-size:50px;">Web food shop</h1>
+			</div>
+			<div class="col-3 align-self-end">
+				<button type="button" class="btn btn-outline-dark" data-toggle="modal"
+					data-target="#exampleModal">Prijava/Registracija</button>
+			</div>
+		</div>
 	</div>
-	
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Prijava/Registracija</h5>
+					<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body align-items-center">
+					<form>
+						<div class="form-floating m-4 ">
+							<input type="username" class="form-control" id="floatingInput" placeholder="Username">
+							<label for="floatingInput">Korisničko ime</label>
+						</div>
+						<div class="form-floating m-4">
+							<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+							<label for="floatingPassword">Lozinka</label>
+						</div>
+
+						<div class="checkbox m-4">
+							<label>
+								<input type="checkbox" value="remember-me"> Zapamti me
+							</label>
+						</div>
+						<button class="m-4 btn btn-lg btn-primary" type="submit" style="width: 90%;">Uloguj se</button>
+						<p class="mt-5 mb-3 text-muted">&copy; 2021</p>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+		integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
