Refaktroisanje servisa, kontrolera i repozitorijuma; logovanje korisnika i redirekcija na stranice

--- a/static/index.html
+++ b/static/index.html
@@ -11,22 +11,13 @@
 		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<script src="js/jquery.min.js"></script>
 	<script src="loginRegistration.js"></script>
+	<link href="background.css" rel="stylesheet">
 	<style>
-		html,
-		body {
-			height: 100%;
-		}
 
-		.bg {
-			background-image: url('images/main-background.jpg');
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
 	</style>
 </head>
 
-<body class="bg">
+<body class="bg" style="background-image: url('images/main-background.jpg');">
 	<div class="container">
 		<div class="row justify-content-between">
 			<div class="col-4">
