--- a/static/index.html
+++ b/static/index.html
@@ -17,110 +17,29 @@
 	</style>
 </head>
 
-<body class="bg" style="background-image: url('images/main-background.jpg');">
-	<div class="container">
-		<div class="row justify-content-between">
-			<div class="col-4">
-				<h1 style="font-size:50px;">Web food shop</h1>
-			</div>
-			<div class="col-3 align-self-end">
-				<button type="button" class="btn btn-outline-dark" data-toggle="modal"
-					data-target="#loginModal">Prijava</button>
-				<button type="button" class="btn btn-outline-dark" data-toggle="modal"
-					data-target="#registrationModal">Registracija</button>
-			</div>
-		</div>
-	</div>
-	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
-		aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="loginModalLabel">Prijava</h5>
-					<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body align-items-center">
-					<form id="loginForm">
-						<div class="form-floating m-4 ">
-							<input type="username" class="form-control" id="floatingInput" placeholder="Username">
-							<label for="floatingInput">Korisničko ime</label>
-						</div>
-						<div class="form-floating m-4">
-							<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-							<label for="floatingPassword">Lozinka</label>
-						</div>
-
-						<div class="checkbox m-4">
-							<label>
-								<input type="checkbox" value="remember-me"> Zapamti me
-							</label>
-						</div>
-						<button class="m-4 btn btn-lg btn-primary" type="submit" style="width: 90%;">Uloguj se</button>
-						<div id="error" class="alert alert-danger m-4" role="alert" style="display: none;"></div>
-						<div id="success" class="alert alert-success m-4" role="alert" style="display: none;"></div>
-						<p class="mt-5 mb-3 text-muted">&copy; 2021</p>
-					</form>
-				</div>
-			</div>
-		</div>
+<body>
+	<div id="index">
+		<router-view></router-view>
 	</div>
 
-	<div class="modal fade" id="registrationModal" tabindex="-1" role="dialog" aria-labelledby="registrationModalLabel"
-		aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="registrationModalLabel">Registracija</h5>
-					<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body align-items-center">
-					<form id="registrationForm">
-						<div class="form-floating m-4 ">
-							<input type="name" class="form-control" id="floatingName" placeholder="Name">
-							<label for="floatingName">Ime</label>
-						</div>
-						<div class="form-floating m-4">
-							<input type="lastname" class="form-control" id="floatingLastName" placeholder="LastName">
-							<label for="floatingLastName">Prezime</label>
-						</div>
-						<div class="form-floating m-4">
-							<input type="date" class="form-control" id="floatingBirthDate" placeholDer="BirthDate">
-							<label for="floatingBirthDate">Datum rođenja</label>
-						</div>
-						<div class="form-floating m-4">
-							<select class="form-control" id="floatingSex" placeholder="Sex">
-								<option value="Muški">Muški</option>
-								<option value="Ženski">Ženski</option>
-							</select>
-							<label for="floatingSex">Pol</label>
-						</div>
-						<div class="form-floating m-4 ">
-							<input type="username" class="form-control" id="floatingUsername" placeholder="Username">
-							<label for="floatingUsername">Korisničko ime</label>
-						</div>
-						<div class="form-floating m-4">
-							<input type="password" class="form-control" id="floatingPasswordReg" placeholder="PasswordReg">
-							<label for="floatingPasswordReg">Lozinka</label>
-						</div>
-
-						<button class="m-4 btn btn-lg btn-primary" type="submit" style="width: 90%;">Registruj
-							se</button>
-						<div id="errorReg" class="alert alert-danger m-4" role="alert" style="display: none;"></div>
-						<div id="successReg" class="alert alert-success m-4" role="alert" style="display: none;"></div>
-						<p class="mt-5 mb-3 text-muted">&copy; 2021</p>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-
+	<script src="js/vue.js"></script>
+	<script src="js/vue-router.js"></script>
 	<script src="js/axios.js"></script>
+	
+	<script src="components/index.js"> </script>
+	<script src="components/customer.js"> </script>
+	<script src="components/deliverer.js"> </script>
+	<script src="components/administrator.js"> </script>
+	<script src="components/manager.js"> </script>
+	<script src="js/app.js"> </script>
+
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
 		crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
 		integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
 		crossorigin="anonymous"></script>
+
 </body>
 
 </html>
