--- a/static/index.html
+++ b/static/index.html
@@ -10,15 +10,11 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<script src="js/jquery.min.js"></script>
-	<script src="loginRegistration.js"></script>
 	<link href="background.css" rel="stylesheet">
-	<style>
-
-	</style>
 </head>
 
 <body>
-	<div id="index">
+	<div id="index" class="bg">
 		<router-view></router-view>
 	</div>
 
