--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,8 @@
 	<script src="components/administrator.js"> </script>
 	<script src="components/manager.js"> </script>
 	<script src="components/profile.js"> </script>
+	<script src="components/usersAdministrator.js"> </script>
+	<script src="components/restaurantsAdministrator.js"> </script>
 	<script src="js/app.js"> </script>
 
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
