dodata stranica za prikaz artikala restorana i stranica za korpu

--- a/static/index.html
+++ b/static/index.html
@@ -38,6 +38,8 @@
 	<script src="components/ordering.js"> </script>
 	<script src="components/usersAdministrator.js"> </script>
 	<script src="components/restaurantsAdministrator.js"> </script>
+	<script src="components/restaurantArticles.js"> </script>
+	<script src="components/shoppingCart.js"> </script>
 	<script src="js/app.js"> </script>
 
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
