--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,9 @@
 	<script src="components/shoppingCart.js"> </script>
 	<script src="js/app.js"> </script>
 
+	<script>
+		function initMap() { }
+	</script>
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&libraries=&v=weekly"
 		async></script>
