--- a/static/index.html
+++ b/static/index.html
@@ -42,6 +42,7 @@
 	<script src="components/restaurantsAdministrator.js"> </script>
 	<script src="components/restaurantArticles.js"> </script>
 	<script src="components/shoppingCart.js"> </script>
+	<script src="components/myOrders.js"> </script>
 	<script src="js/app.js"> </script>
 
 	<script>
