--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,7 @@
 	<script src="components/managerRestaurant.js"> </script>
 	<script src="components/managerOrders.js"> </script>
 	<script src="components/myOrders.js"> </script>
+	<script src="components/rateRestaurant.js"> </script>
 	<script src="js/app.js"> </script>
 
 	<script>
