Komentari kod menadzera i administratora

--- a/static/index.html
+++ b/static/index.html
@@ -46,6 +46,8 @@
 	<script src="components/managerOrders.js"> </script>
 	<script src="components/myOrders.js"> </script>
 	<script src="components/rateRestaurant.js"> </script>
+	<script src="components/commentsAdministrator.js"> </script>
+	<script src="components/managerComments.js"> </script>
 	<script src="js/app.js"> </script>
 
 	<script>
