impementiran prikaz narudzbina kod dostavljaca, kao i prikaz svake porudzbine ponaosob

--- a/static/index.html
+++ b/static/index.html
@@ -48,6 +48,9 @@
 	<script src="components/rateRestaurant.js"> </script>
 	<script src="components/commentsAdministrator.js"> </script>
 	<script src="components/managerComments.js"> </script>
+	<script src="components/delivererOrders.js"> </script>
+	<script src="components/specificOrder.js"> </script>
+
 	<script src="js/app.js"> </script>
 
 	<script>
