--- a/static/proba.html
+++ b/static/proba.html
@@ -24,6 +24,13 @@
 
 <body>
     <div class="bg" style="background-color: sandybrown;">
+        <div class="row">
+            <div class="col-4" >
+                <div class="container" >
+                    <img src="images/food-order-icon-26.jpg"  alt="" height="150" width="150">
+                </div>
+            </div>
+        </div>
     <div class="row" style="margin-left: 180px; ">
         <div class="col-8">
             <label for="" style="font-size: 40px; margin-left: 20px; margin-top: 100px;"> Narudzbina:  </label>
@@ -40,11 +47,6 @@
         <div class="col-8">
             <label for="" style="font-size: 40px; margin-left: 20px;"> Iznos:  </label>
             <label for="" style="font-size: 40px; margin-left: 20px;"> 900  </label>
-        </div>
-        <div class="col-4" >
-            <div class="container" >
-                <img src="images/food-order-icon-26.jpg"  alt="" height="150" width="150">
-            </div>
         </div>
     </div>
     <div class="row" style="margin-left: 180px; margin-top: 35px;">
