--- a/static/index.html
+++ b/static/index.html
@@ -50,6 +50,7 @@
 	<script src="components/managerComments.js"> </script>
 	<script src="components/delivererOrders.js"> </script>
 	<script src="components/specificOrder.js"> </script>
+	<script src="components/searchedRestaurants.js"> </script>
 
 	<script src="js/app.js"> </script>
 
