--- a/static/proba.html
+++ b/static/proba.html
@@ -23,47 +23,19 @@
 </head>
 
 <body>
-    <div class="bg" style="background-color: sandybrown;">
-        <div class="row">
-            <div class="col-4" >
-                <div class="container" >
-                    <img src="images/food-order-icon-26.jpg"  alt="" height="150" width="150">
-                </div>
+    <div>
+        <div class="row" >
+            <div class="container" style="margin-top: 30px;">
+                <img src="images/search.png" alt="" width="200" height="150" style="margin-bottom: 50px;">
+                <label for="" style="font-size: 70px; margin-top: 30px;"> Rezultati pretrage </label>
             </div>
         </div>
-    <div class="row" style="margin-left: 180px; ">
-        <div class="col-8">
-            <label for="" style="font-size: 40px; margin-left: 20px; margin-top: 100px;"> Narudzbina:  </label>
-            <label for="" style="font-size: 40px; margin-left: 20px; margin-top: 100px;"> 11111111  </label>
+        <div class="row" style="margin-left: 50px; margin-top: 60px; font-size: 20px; text-align: center;">
+            <div class="col-10">
+                <label for="" style="font-size: 40px; "> Nijedan restoran nije pronadjen! </label>
+            </div>
         </div>
     </div>
-    <div class="row" style="margin-left: 180px; margin-top: 35px;">
-        <div class="col-8">
-            <label for="" style="font-size: 40px; margin-left: 20px;"> Restoran:  </label>
-            <label for="" style="font-size: 40px; margin-left: 20px;"> McDonalds  </label>
-        </div>
-    </div>
-    <div class="row" style="margin-left: 180px; margin-top: 35px;">
-        <div class="col-8">
-            <label for="" style="font-size: 40px; margin-left: 20px;"> Iznos:  </label>
-            <label for="" style="font-size: 40px; margin-left: 20px;"> 900  </label>
-        </div>
-    </div>
-    <div class="row" style="margin-left: 180px; margin-top: 35px;">
-        <div class="col-8">
-            <table style="font-size: 40px; margin-left: 20px;">
-                <tr>
-                    <th> Artikli </th>
-                    <th> <label for="" style="margin-left: 100px;"> Kolicina </label> </th>
-                </tr>
-                <tr v-for="article in restaurant.articles">
-                    <td> <label for="" > Hamburger</label> </td>
-                    <td> <label for="" style="margin-left: 100px;"> 2 </label> </td>
-                </tr>
-            </table>
-        </div>
-    </div>
-</div>
 </body>
 
 </html>
