--- a/static/proba.html
+++ b/static/proba.html
@@ -23,19 +23,59 @@
 </head>
 
 <body>
-    <div>
-        <div class="row" >
-            <div class="container" style="margin-top: 30px;">
-                <img src="images/search.png" alt="" width="200" height="150" style="margin-bottom: 50px;">
-                <label for="" style="font-size: 70px; margin-top: 30px;"> Rezultati pretrage </label>
+    <div class="row" >
+        <div class="container" style="margin-top: 30px;">
+            <img src="images/search.png" alt="" width="200" height="150" style="margin-bottom: 50px;">
+            <label for="" style="font-size: 70px; margin-top: 30px;"> Rezultati pretrage </label>
+        </div>
+    </div>
+    <div class="row" style="margin-left: 50px; margin-top: 60px; font-size: 20px; text-align: center;" v-if="restaurants.length === 0">
+        <div class="col-10">
+            <label for="" style="font-size: 40px; " > Nijedan restoran nije pronadjen! </label>
+        </div>
+    </div>
+    <div v-else>
+        <div class="row">
+            <div class="col-3" style="font-size: 20px; margin-left: 200px; margin-top: 40px;">
+                <select name="type" id="typeRes">
+                    <option value="Tip restorana">Tip restorana</option>
+                    <option value="Svi">Svi</option>
+                    <option value="Brza hrana">Brza hrana</option>
+                    <option value="Kineski">Kineski</option>
+                    <option value="Picerija">Picerija</option>
+                    <option value="Roštilj">Roštilj</option>
+                    <option value="Riblji">Riblji</option>
+                </select>
+                <input type="checkbox" id="" v-on:click="filterData"> afas
+                <button class="btn" onclick="filterData"> Filtriraj </button>
             </div>
         </div>
         <div class="row" style="margin-left: 50px; margin-top: 60px; font-size: 20px; text-align: center;">
             <div class="col-10">
-                <label for="" style="font-size: 40px; "> Nijedan restoran nije pronadjen! </label>
+                <table>
+                    <tr>
+                        <th> Logo </th>
+                        <th> Restoran </th>
+                        <th> Tip </th>
+                        <th> Adresa </th>
+                        <th> Prosečna ocena </th>
+                    </tr>
+                    <tr v-for="restaurant in restaurants">
+                        <td> <img :src="restaurant.logo" alt="" height="80" width="80"> </td>
+                        <td> <label for="" style="margin-left: 30px; margin-right: 20px;"> {{restaurant.name}} </label> </td>
+                        <td> <label for="" style="margin-left: 30px;"> {{restaurant.restaurantType}} </label> </td>
+                        <td> <label for="" style="margin-left: 40px;"> {{getAddress(restaurant)}} </label> </td>
+                        <td> <label for="" style="margin-left: 40px;"> {{restaurant.averageRating}} </label> </td>
+                        <td> 
+                            <button class="btn btn-primary" style="margin-left: 40px;" v-on:click="showRestaurant(restaurant)"> Prikaži </button>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
+    
+    
 </body>
 
 </html>
