--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,7 @@
 	<script src="components/delivererOrders.js"> </script>
 	<script src="components/specificOrder.js"> </script>
 	<script src="components/searchedRestaurants.js"> </script>
+	<script src="components/showRestaurant.js"> </script>
 
 	<script src="js/app.js"> </script>
 
